crates/toml/tests/snapshots/invalid/datetime/trailing-x.stderr
TOML parse error at line 1, column 16
  |
1 | sign=2020-01-01x
  |                ^
expected newline, `#`
